--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fun with Triangles</title>
+    <title>Birthdate Palindrome Checker</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 
@@ -13,9 +13,9 @@
     <div class="main">
         <h1>Palindrome Birthday</h1>
 
-        <input type="date" name="" id="bday-input" />
+        <input type="date" id="bday-input" />
         <button id="show-btn">Show</button>
-        <p id="result"></p>
+        <p id="output"></p>
     </div>
     <script src="/main.js"></script>
 </body>
