--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="main">
-        <h1>Palindrome Birthday</h1>
+        <h1>Palindrome Birthday Checker</h1>
 
         <input type="date" id="bday-input" />
         <button id="show-btn">Show</button>
